--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,8 @@ application.security.jwt.secret-key=MIIBVQIBADANBgkqhkiG9w0BAQEFAASCAT8wggE7AgEA
 application.security.jwt.expiration-time=86400000
 # 7 days
 application.security.jwt.refresh-token.expiration-time=604800000
+application.allow.origin=http://192.168.1.8:3000
+application.allow.local-origin=http://localhost:3000
 #WEBSOCKET CONFIG
 websocket.request.handshake.parameter.client-id=clientId
 websocket.request.handshake.parameter.client-type=clientType
